postgres-macros/tests/fail-stable/enum_extra_variant.stderr
error[E0277]: the trait bound `Vec<User>: Query<Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>>` is not satisfied
  --> tests/fail-stable/enum_extra_variant.rs:26:59
   |
26 |     let _: Vec<User> = sql!("SELECT id, role FROM users").await.unwrap();
   |                                                          -^^^^^
   |                                                          ||
   |                                                          |the trait `Query<Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>>` is not implemented for `Vec<User>`, which is required by `Sql<'_, Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>, _>: IntoFuture`
   |                                                          help: remove the `.await`
   |
   = help: the following other types implement trait `Query<Cols>`:
             <Vec<u8> as Query<Primitive<Bytea>>>
             <Vec<Vec<u8>> as Query<Primitive<Bytea>>>
             <Vec<Vec<u8>> as Query<sqlm_postgres::types::Array<Vec<Bytea>>>>
             <Vec<T> as Query<Struct<Cols>>>
             <Vec<T> as Query<Primitive<<T as SqlType>::Type>>>
             <Vec<T> as Query<sqlm_postgres::types::Array<Vec<<T as SqlType>::Type>>>>
   = note: required for `Sql<'_, Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>, Vec<User>>` to implement `IntoFuture`
